--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,4 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<p>Ironhack Cinema</p>
+<img src="../public/images/cinema.jpg" />
+
+<a href="/movies">Check the movies</a>
